# tiak

./: README.md
server/: .env.example  .gitignore  Cargo.toml  README.md
server/src/: cleanup.rs  config.rs  db.rs  main.rs  queue.rs  routes.rs  storage.rs
web/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/public/: manifest.json
web/src/components/: CustomVideoPlayer.tsx  HistoryTable.tsx  HistoryToolbar.tsx  InstallPrompt.tsx  Layout.tsx  LazyThumbnail.tsx  StatusBadge.tsx
web/src/lib/: api.ts  config.ts
web/src/pages/: _app.tsx  _document.tsx  files.tsx  history.tsx  index.tsx  settings.tsx
web/src/pages/api/: hello.ts  share_target.ts
web/src/styles/: globals.css
